// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`traced-tab geometry byte-identity (#574) > 'classic-sine 5x5 traced v2' produces identical geometry 1`] = `
{
  "count": 25,
  "digest": "1923483c",
}
`;

exports[`traced-tab geometry byte-identity (#574) > 'classic-sine 6x6 traced v1' produces identical geometry 1`] = `
{
  "count": 36,
  "digest": "5e5c7fc0",
}
`;

exports[`traced-tab geometry byte-identity (#574) > 'triangles r6 traced v2' produces identical geometry 1`] = `
{
  "count": 90,
  "digest": "ac363939",
}
`;

exports[`traced-tab geometry byte-identity (#574) > 'wavy 5x5 traced v1' produces identical geometry 1`] = `
{
  "count": 25,
  "digest": "e695d88e",
}
`;

exports[`traced-tab geometry byte-identity (#574) > 'wavy 6x5 traced v2' produces identical geometry 1`] = `
{
  "count": 30,
  "digest": "1190fe97",
}
`;
